--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,3 +1,8 @@
 <link rel="stylesheet" href="/css/user_profile.css">
 
 <h1>Codeial / profile page</h1>
+
+<p>Name : <%= user.name %>
+</p>
+<p>Email : <%= user.email %>
+</p>
