--- a/views/home.ejs
+++ b/views/home.ejs
@@ -118,4 +118,15 @@
         <% } %>
 </section>
 
-<script src="./js/home_posts.js"></script>
+<%- include('_chat_box') -%>
+
+    <script src="./js/home_posts.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.4/socket.io.js"></script>
+    <script src="/js/chat_engine.js"></script>
+
+    <% if (locals.user){ %>
+        <script>
+            new ChatEngine('user-chat-box', '<%= locals.user.email %>')
+        </script>
+        <% } %>
